--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
   <section class="download">
     <h2>Download CatOS Minimal</h2>
-    <a href="https://release-assets.githubusercontent.com/github-production-release-asset/1111100002/df5cf32f-ba47-4545-b668-b16195814728?sp=r&sv=2018-11-09&sr=b&spr=https&se=2025-12-06T19%3A01%3A51Z&rscd=attachment%3B+filename%3Dcatos-minimalv1.amd64.iso&rsct=application%2Foctet-stream&skoid=96c2d410-5711-43a1-aedd-ab1947aa7ab0&sktid=398a6654-997b-47e9-b12b-9515b896b4de&skt=2025-12-06T18%3A01%3A09Z&ske=2025-12-06T19%3A01%3A51Z&sks=b&skv=2018-11-09&sig=YJtXyQFBmy1zc5bSnOTBwN6QicgAw%2BxcNX6uHaprF4w%3D&jwt=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJnaXRodWIuY29tIiwiYXVkIjoicmVsZWFzZS1hc3NldHMuZ2l0aHVidXNlcmNvbnRlbnQuY29tIiwia2V5Ijoia2V5MSIsImV4cCI6MTc2NTA0Nzg2MiwibmJmIjoxNzY1MDQ0MjYyLCJwYXRoIjoicmVsZWFzZWFzc2V0cHJvZHVjdGlvbi5ibG9iLmNvcmUud2luZG93cy5uZXQifQ.dX-GTmx722Vy5CGXaxzL4U-GKSct_2DooC0_uC2C4ZA&response-content-disposition=attachment%3B%20filename%3Dcatos-minimalv1.amd64.iso&response-content-type=application%2Foctet-stream" target="_blank">
+    <a href="https://github.com/RTFXZ/CatOS-Minimal/releases/download/v1.0/catos-minimalv1.amd64.iso" target="_blank">
       Download ISO (amd64)
     </a>
   </section>
