--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CatOS Minimal</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="https://drive.google.com/uc?id=1qIjOw2VVqQLMU1LRKSg2PLycNTrs3sdo">
   <style>
     body {
       font-family: 'Roboto', sans-serif;
