Update favicon link to new icon file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CatOS Minimal</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" href="/catos-logo.png">
+  <link rel="icon" type="image/png" href="/catos-logo3.ico">
   <style>
     body {
       font-family: 'Roboto', sans-serif;
